<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/buttonMsgrule"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="729dp"
        android:orientation="vertical"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/chieri_bot_client" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/ws_port" />

            <EditText
                android:id="@+id/editTextWsPort"
                android:layout_width="316dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/input_ws_port"
                android:inputType="number" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/http_port" />

            <EditText
                android:id="@+id/editTextHttpPort"
                android:layout_width="316dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/input_http_port"
                android:inputType="number" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/token" />

            <EditText
                android:id="@+id/editTextToken"
                android:layout_width="316dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/input_token"
                android:inputType="textPassword" />

        </LinearLayout>

        <Button
            android:id="@+id/buttonLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/connect" />

        <Button
            android:id="@+id/buttonDisconnect"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:text="@string/disconnect" />

        <Button
            android:id="@+id/buttonBWSet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/blackWhiteSet" />

        <Button
            android:id="@+id/buttonMsgRule"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/msgRuleSet" />

        <Button
            android:id="@+id/buttonPokeSet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pokeSet" />

        <Button
            android:id="@+id/buttonMsgRuleEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/edit_msgrule_json" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/log" />

            <EditText
                android:id="@+id/editTextTextLog"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:cursorVisible="false"
                android:editable="false"
                android:ems="10"
                android:gravity="start|top"
                android:inputType="textMultiLine"
                android:textSize="12sp" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>